            Added option to enforce minimum days between syncs (Now option in snapPERL.conf)
            Added command line options that override conf settings if needed - snapPERL.pl -h
            Added option to disable all scrub activity
            Added snapPERL conf file checker - To enable easy upgrades

11/05/2016 v0.2.2
            Added windows support. No help files yet but tested and working. Must have ActivePerl / Strawberry Perl or DWIM Perl installed
            Tested using lastest ActivePerl and lates Snapraid for windows x64 v10.0
    
11/05/2016 v0.2.1
            Fixed critical bug in code loading json from pervious run that does not exist on a new install

11/05/2016 v0.2
            Fixed Critical Issue: Unable to load config file whan called outside working directory
            File slurping moved to dedicated function
            Added option to turn auto touch off
            Remove issue where touch would run on snapraid versions below 10.0
            Function snap_run now collects stderr/exitcode as well as stdout
            Script will abort if snapraid has wrote to stderr asking for user intervention
            Script will not continue when snapraid is carp'ing errors
            Warnings for disk temp based on setting in snapPERL.conf
            Warnings for disk errors based on setting in snapPERL.conf
            Added messaging support - Pushover only at this time
            Move operation files to local script location
            More than just a script now so runs in self contained location by default
            Added tmp dir for temp files during snap_run
            Added log dir for the created log file (Plan to keep x amount of logs)
            Added json dir for static data regarding last run
            Path added due to issue with snapraid.exe runnig smartctl
            OS type detected for future portablity compat
            Basic install.sh script to automate install