@@ -27,13 +27,14 @@ Install Script:
 7. Change settings in custom-cmds to suit (Optional)
 8. ./snapPERL.pl to run
 ~~~
+
 _(Always run first time on command line - Script will check your snapPERL conf file is valid)_
 
 Manual:
 
 ~~~BASH
-1.  wget http://snapperl.stevemiles.me.uk/downloads/latest/snapPERL-latest.zip
-2.  tar -zxvf snapPERL-latest.zip
+1.  wget http://snapperl.stevemiles.me.uk/downloads/latest/snapPERL-latest.tar.gz
+2.  tar -zxvf snapPERL-latest.tar.gz
 3.  mv snapPERL-latest snapPERL
 4.  cd snapPERL
 5.  cp snapPERL.conf.example snapPERL.conf
@@ -44,6 +45,7 @@ Manual:
 10. Install modules if needed (See top of this file)
 11. ./snapPERL.pl to run 
 ~~~
+
 _(Always run first time on command line - Script will check your snapPERL conf file is valid)_
 
 ### Using git (This will pull latest master commit.. Not a release)
@@ -60,6 +62,7 @@ In snapPERL location on drive type
 git pull
 ~~~
 This will not clobber your conf file but be sure to check for any new options
+
 _(Always run first time on command line - Script will check your snapPERL conf file is valid)_
 
 #####Bleeding edge Dev version
@@ -68,6 +71,7 @@ git pull
 pit merge origin/Dev
 ~~~
 Test first on a new clone - I do break it now and again (I write on machines with no testing enviroment and commit to check when I get home)
+
 _(Always run first time on command line - Script will check your snapPERL conf file is valid)_
 
 ##### You can of course run as a root crontab. Be happy it does what you need first. 
